--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-224.8KB/s(Youtube:不良林), server: 104.208.66.126, port: 10001, type: vmess, uuid: 21f6cf3d-add5-4335-ba2a-96972a7f05bf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 104.208.66.126}}
-  - {name: 🇨🇳 中国-523.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-647.2KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
   - {name: 🇨🇳 中国-539.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇦 加拿大-1.89MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-231.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-5.24MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-151.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇫🇷 法国-729.2KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇫🇷 法国-1.43MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-8.89MB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-224.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-647.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-539.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-729.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.89MB/s(Youtube:不良林)
