--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.62MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.52MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇦 加拿大-233.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-5.96MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-204.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-442.1KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
+  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-5.37MB/s(Youtube:不良林), server: 104.224.188.29, port: 38226, type: vmess, uuid: 9299fb78-290c-4aad-befb-0130c074a622, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-440.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇹🇭 泰国-648.1KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇳🇱 荷兰-2.41MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-233.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-233.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-233.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-233.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-233.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-233.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-233.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-648.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.41MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
